@@ -25,6 +25,7 @@ version <next>:
 - AMR-NB decoding/encoding, AMR-WB decoding via OpenCORE libraries
 - DPX image decoder
 - Electronic Arts Madcow decoder
+- DivX (XSUB) subtitle encoder
 
 
 
